[gd_scene load_steps=8 format=2]

[ext_resource path="res://TitleScreen.gd" type="Script" id=1]
[ext_resource path="res://Sprites/title_background.png" type="Texture" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]
[ext_resource path="res://Sprites/ui_buttons1.png" type="Texture" id=4]
[ext_resource path="res://Sprites/ui_buttons_selected1.png" type="Texture" id=5]
[ext_resource path="res://Sprites/ui_buttons3.png" type="Texture" id=6]
[ext_resource path="res://Sprites/ui_buttons_selected3.png" type="Texture" id=7]

[node name="TitleScreen" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0.278794, 0.358483 )
scale = Vector2( 0.125013, 0.125013 )
texture = ExtResource( 2 )
centered = false

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 320.0
margin_bottom = 180.0
custom_constants/margin_right = 0
custom_constants/margin_top = 20
custom_constants/margin_left = 0
custom_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 128.0
margin_top = 20.0
margin_right = 192.0
margin_bottom = 160.0
size_flags_horizontal = 4
custom_constants/separation = 16

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer"]
margin_right = 64.0
margin_bottom = 64.0
size_flags_horizontal = 4
texture = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 80.0
margin_right = 64.0
margin_bottom = 130.0

[node name="TextureButton" type="TextureButton" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_right = 64.0
margin_bottom = 23.0
texture_normal = ExtResource( 4 )
texture_focused = ExtResource( 5 )

[node name="TextureButton2" type="TextureButton" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 27.0
margin_right = 64.0
margin_bottom = 50.0
texture_normal = ExtResource( 6 )
texture_focused = ExtResource( 7 )
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/TextureButton" to="." method="_on_start_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/TextureButton2" to="." method="_on_exit_pressed"]
